2002-10-01  John Levon  <levon@movementarian.org>

	* daemon/.cvsignore: add
 
	* libop/op_interface_25.h: 
	* daemon/opd_image.h:
	* daemon/opd_image.c:
	* daemon/oprofiled.c: fixups for new encoded interface. Fix
	  --separate-samples

	* utils/op_start_25: startup fixes
 
2002-09-26  Will Cohen  <wcohen@redhat.com>

	* module/x86/op_model_p4.c: Correct TC_DELIVER_MODE cccr select.
 
2002-09-23  Graydon Hoare  <graydon@redhat.com>

	* dae/oprofiled.c:
	* daemon/op_sample_files.c:
	* daemon/oprofiled.c:
	* pp/op_to_source.c:
	* utils/op_help.c: u8 unit mask -> u16 unit-mask. I'm not sure this
	  catches *all* the instances, but it does appear to be an improvement

2002-09-30  William Cohen  <wcohen@redhat.com>

	* libutil++/string_manip.cpp (sample_filename): Correct declaration.
	* pp/samples_container.h: Correct add_samples() declaration. 

2002-09-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp:
	* libutil++/string_manip.h: sample_filename() new
	
	* pp/samples_container.cpp:
	* pp/samples_container.h: add_samples() new
	
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/oprofpp.cpp:
	* pp/samples_file.cpp: use them + minor cleanup

2002-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libopt++/popt_options.cpp: fix #615760, in rare case
	  oprofpp called with lot of invalid arguments segfault
	  during the help printing. All post-profile tools are
	  concerned by this fix.

	* doc/oprofile.xml: small improvements

	* libutil++/op_bfd.cpp: improve error message when bfd_openr() fails.
	
	* TODO: update

2002-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_parse_proc.c:
	* dae/opd_parse_parse.h:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* daemon/opd_sample_files.c:
	* libop/op_cpu_type.c:
	* libop/op_events.c:
	* libop/op_events_desc.c:
	* libopt++/popt_options.cpp:
	* libutil/op_deviceio.c:
	* libutil/op_file.c:
	* libutil++/file_manip.cpp: